:tada: [kmp] ipc-pool
:construction: IpcEndpoint

:construction: IpcEndpoint

:construction: IpcEndpoint

:construction: IpcEndpoint

:construction: MicroModule.Runtime

:construction: :fire: MicroModule.Runtime、移除nativeui

:construction: IpcEndpoint

:construction: IpcEndpoint

:construction: IpcEndpoint 现在可以正确握手

:construction: IpcEndpoint

:bug: [kmp/helper] 修复Once函数中 atomic 的使用

:construction: IpcEndpoint

:sparkles: :construction: IpcEndpoint 初步打通了整个mm+ipc的工作流

:sparkles: :construction: IpcEndpoint  整理了生命周期，修复了Endpoint的多Ipc实例并发支持

:sparkles: :construction: 实现了新的事件分发器 Producer

:construction: 修正一些启动流程

:recycle: 初步完成使用 ipc.fork 来实现 PureChannel

:white_check_mark: :sparkles: [kmp/pureHttp] 完成了PureChannel的适配

:sparkles: 基本完成了应用启动

:ambulance: 修正rebase后的兼容性问题

:bug: 修复Ipc的close、修复ipc与pureChannel的互相转换

:sparkles: :bug: 增加了OrderBy，修复了NativeEndpoint的事件触发存在阻塞的问题

:bee: [kmp/android] 添加一些注释，修复android运行

:shit:

:ambulance:

:bug: 修复LateInit使用atomic导致存在卡死的问题

:bug: 修复Ipc的forkedIpcMap的设计存在卡死的问题

:recycle: generatePid 现在跟随 endpoint；简化了Producer，现在不需要channel，只用OrderDeferred替代

:bug: 修复MicroModule bootstrap没有释放资源的问题

:bug: 修复一些稳定性问题

修复了 Event 进行 buffers.remove 的时机，使用complete函数替代
修复once没有使用start = CoroutineStart.UNDISPATCHED导致的执行顺序问题
修复pureChannelToIpcEvent的调用没有使用start = CoroutineStart.UNDISPATCHED导致的问题

:bug: 稳定通过HttpNMMTest

:bug: 修复了asPureRequest函数没有组装完整url的问题

:bug: 修复traceTimeout函数返回值问题

:recycle: :bug: 重写pureChannelToIpcEvent函数，使得更加清晰稳定

:construction: [js-ipc] 暂时提及worker ipc的修改

:recycle: 对EndpointMessage/IpcMessage进行格式重构

:label: [js-ipc] 现在更改为直接根据类型构造对象

:construction: [js-ipc]

:construction: [js-ipc]

:construction: [js-ipc] 使用vitest

:construction: [js-ipc] StateSignal增加自定义equals

:tada:  :construction: [js-ipc] ipc初步通过测试

:construction: [js-process-worker]

:construction: [js-process-worker]

:construction: [js-process]

:tada: :construction: [js-process] 初步打通了js-process启动js线程的功能

:recycle: IpcMessage & IpcRawMessage 现在分开

:bug: 修复Producer.Consumer不能被正确collectWhi