@@ -9,28 +9,28 @@ import org.gradle.api.NamedDomainObjectProvider
 import org.gradle.api.Project
 import org.gradle.api.artifacts.dsl.DependencyHandler
 import org.gradle.api.file.RegularFileProperty
+import org.gradle.api.plugins.ExtensionAware
 import org.gradle.api.plugins.JavaPlugin
+import org.gradle.api.tasks.JavaExec
 import org.gradle.api.tasks.testing.Test
 import org.gradle.jvm.toolchain.JavaLanguageVersion
 import org.gradle.kotlin.dsl.dependencies
-import org.gradle.kotlin.dsl.getByType
 import org.gradle.kotlin.dsl.the
 import org.gradle.kotlin.dsl.withType
-import org.jetbrains.compose.ComposeExtension
 import org.jetbrains.compose.ComposePlugin
 import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
 import org.jetbrains.kotlin.gradle.dsl.KotlinCommonOptions
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
-import org.jetbrains.kotlin.gradle.kpm.external.ExternalVariantApi
-import org.jetbrains.kotlin.gradle.kpm.external.project
 import org.jetbrains.kotlin.gradle.plugin.KotlinCompilation
 import org.jetbrains.kotlin.gradle.plugin.KotlinDependencyHandler
 import org.jetbrains.kotlin.gradle.plugin.KotlinSourceSet
 import org.jetbrains.kotlin.gradle.targets.js.dsl.KotlinJsTargetDsl
 import org.jetbrains.kotlin.gradle.targets.js.nodejs.NodeJsExec
 import org.jetbrains.kotlin.gradle.targets.js.testing.KotlinJsTest
+import org.jetbrains.kotlin.gradle.targets.jvm.tasks.KotlinJvmTest
 import java.io.File
 import java.nio.file.Files
+import java.util.Properties
 
 fun KotlinCompilation<KotlinCommonOptions>.configureCompilation() {
   kotlinOptions {
@@ -46,9 +46,8 @@ open class KmpJsTargetDsl(kmpe: KotlinMultiplatformExtension) : KmpBaseTargetDsl
 
 class KmpBrowserJsTargetDsl(kmpe: KotlinMultiplatformExtension) : KmpJsTargetDsl(kmpe)
 
-@OptIn(ExternalVariantApi::class)
 val KotlinMultiplatformExtension.compose: ComposePlugin.Dependencies
-  get() = project.extensions.getByType<ComposeExtension>().dependencies
+  get() = (this as ExtensionAware).extensions.getByName("compose") as ComposePlugin.Dependencies
 
 fun KotlinMultiplatformExtension.kmpBrowserJsTarget(
   project: Project,
@@ -181,7 +180,7 @@ class KmpNodeWasmTargetDsl(kmpe: KotlinMultiplatformExtension) : KmpBaseTargetDs
 
 fun KotlinMultiplatformExtension.kmpNodeWasmTarget(
   project: Project,
-  configure: KmpNodeWasmTargetDsl.() -> Unit = {}
+  configure: KmpNodeWasmTargetDsl.() -> Unit = {},
 ) {
   val libs = project.the<LibrariesForLibs>()
   val dsl = KmpNodeWasmTargetDsl(this)
@@ -297,7 +296,7 @@ open class KmpBaseTargetDsl(private val kmpe: KotlinMultiplatformExtension) {
 
   internal fun provides(
     sourceSet: KotlinSourceSet,
-    testSourceSet: KotlinSourceSet? = null
+    testSourceSet: KotlinSourceSet? = null,
   ) {
     val cbs = whenProvideCallbacks.getOrDefault(kmpe, mutableSetOf())
     sourceSet.run {
@@ -359,7 +358,7 @@ class KmpCommonTargetDsl(kmpe: KotlinMultiplatformExtension) : KmpBaseTargetDsl(
 @OptIn(ExperimentalKotlinGradlePluginApi::class)
 fun KotlinMultiplatformExtension.kmpCommonTarget(
   project: Project,
-  configure: KmpCommonTargetConfigure = KmpCommonTargetDsl.defaultConfigure
+  configure: KmpCommonTargetConfigure = KmpCommonTargetDsl.defaultConfigure,
 ) {
   if (configuredCommonProjects[project].let {
       configure == it || (configure == KmpCommonTargetDsl.defaultConfigure && it != null)
@@ -429,7 +428,7 @@ class KmpComposeTargetDsl(kmpe: KotlinMultiplatformExtension) : KmpBaseTargetDsl
 
 fun KotlinMultiplatformExtension.kmpComposeTarget(
   project: Project,
-  configure: KmpComposeTargetDsl.() -> Unit = {}
+  configure: KmpComposeTargetDsl.() -> Unit = {},
 ) {
   val libs = project.the<LibrariesForLibs>()
   val dsl = KmpComposeTargetDsl(this)
@@ -500,7 +499,7 @@ class KmpAndroidTargetDsl(kmpe: KotlinMultiplatformExtension) : KmpBaseTargetDsl
 fun KotlinMultiplatformExtension.kmpAndroidTarget(
   project: Project,
   forceEnable: Boolean = false,
-  configure: KmpAndroidTargetDsl.() -> Unit = {}
+  configure: KmpAndroidTargetDsl.() -> Unit = {},
 ) {
   if (Features.androidApp.disabled && !forceEnable) {
     return
@@ -577,12 +576,15 @@ class KmpIosTargetDsl(kmpe: KotlinMultiplatformExtension) : KmpBaseTargetDsl(kmp
 
 fun KotlinMultiplatformExtension.kmpIosTarget(
   project: Project,
-  configure: KmpIosTargetDsl.() -> Unit = {}
+  configure: KmpIosTargetDsl.() -> Unit = {},
 ) {
   if (Features.iosApp.disabled || !Platform.isMac) {
     return
   }
   println("kmpIosTarget: ${project.name}")
+
+  // TODO: 升级 kotlin 2.0.0 版本之前临时使用来软链接到 shared ComposeResource
+  kmpComposeResourceSymbolToShared(project)
 
   val dsl = KmpIosTargetDsl(this)
   dsl.configure()
@@ -616,6 +618,67 @@ fun Project.configureJvmTests(fn: Test.() -> Unit = {}) {
     }
     fn()
   }
+
+// 用于启动桌面应用时注入key
+  afterEvaluate {
+    tasks.withType<JavaExec>() {
+      systemProperties["jxbrowser.license.key"] = getJxBrowserLicenseKey()
+//    jvmArgs("--add-opens", "java.desktop/java.awt=ALL-UNNAMED")
+    }
+    tasks.withType<KotlinJvmTest>() {
+      systemProperties["jxbrowser.license.key"] = getJxBrowserLicenseKey()
+    }
+  }
 }
 
 infix fun String.belong(domain: String) = this == domain || this.startsWith("$domain.")
+
+fun Project.getJxBrowserLicenseKey() = System.getProperty("jxbrowser.license.key") ?: run {
+  Properties().also { properties ->
+    rootDir.resolve("local.properties").apply {
+      if (exists()) {
+        inputStream().use { properties.load(it) }
+      }
+    }
+  }.getProperty("jxbrowser.license.key", "").also {
+    System.setProperty("jxbrowser.license.key", it)
+  }
+}
+
+fun KotlinMultiplatformExtension.kmpComposeResourceSymbolToShared(
+  project: Project,
+  configure: KmpCommonTargetConfigure = KmpCommonTargetDsl.defaultConfigure,
+) {
+  if (project.name == "shared") {
+    return
+  }
+  with(sourceSets.commonMain.get()) {
+    kotlin.srcDirs.firstOrNull()?.let { srcFile ->
+      val composeResources = srcFile.resolve("../composeResources")
+
+      if (!composeResources.exists()) {
+        return
+      }
+
+      val sharedComposeResources = srcFile.resolve(
+        "../../../../shared/src/iosMain/composeResources"
+      ).also { it.mkdirs() }
+
+      composeResources.listFiles { dir, name ->
+        if (name.isNotEmpty()) {
+          val linkDeskFile = sharedComposeResources.resolve(name) // 创建link
+          val targetFile = dir.resolve(name) // 目标路径
+          if (!linkDeskFile.exists()) {
+            Files.createSymbolicLink(
+              linkDeskFile.toPath(),
+              targetFile.toPath()
+            )
+          } else {
+            println("file already exists => ${linkDeskFile.absolutePath}")
+          }
+        }
+        false
+      }
+    }
+  }
+}
